--- a/style/components/_task.scss
+++ b/style/components/_task.scss
@@ -3,29 +3,40 @@
     position: relative;
     height: 20%;
     // margin: 0.2em;
-    border-radius: 0.5em;
-    clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+    // border-radius: 0.5em;
+    background-color: $light-grey-3;
 
+    &:not(:last-child) {
+        margin-bottom: 0.5em;
+    }
+
+    
     & .__title {
         position: absolute;
         top: 0;
-        left: 1em;
         z-index: 1;
-        width: 100%;
+        padding-top: 1rem;
+        text-transform: uppercase;
+        font-weight: 100;
+        color: $dark-grey-1;
+        padding-left: 2rem;
+        width: fit-content;
+        text-decoration: underline;
+        font-size: 1.6em;
         height: 50%;
-        background-color: $medium-grey-2;
     }
 
     & .__start-time {
         position: absolute;
         top: 0;
-        left: 1em;
+        font-weight: 900;
+        font-size: 1.5em;
         z-index: 1;
-        width: 100%;
+        color: $medium-grey-1;
+        width: fit-content;
         top: 50%;
-        height: 50%;
-        background-color: $medium-grey-2;
-
+        right: 4rem;
+        height: 50%
     }
 
     & .__side-bar {
@@ -51,6 +62,10 @@
                 background-color: darkgreen;
             }
 
+            &:active {
+                transform: scale(1.1);
+            }
+
         }
 
         & .__remove-btn {
@@ -63,6 +78,10 @@
             
             &:hover {
                 background-color: darkred;
+            }
+
+            &:active {
+                transform: scale(1.1);
             }
         }
 
@@ -92,7 +111,7 @@
 
     & .__tab-main {
         position: absolute;
-        background-color: $dark-grey-1;
+        background-color: $dark-grey-2;
         max-width: 1em;
         left: 0;
         display: flex;
@@ -107,28 +126,6 @@
         height: 100%;
         cursor: pointer;
         
-        &:after {
-            // content: "〉";
-        }
-
-        &:hover {
-            // left: 10%;
-        }  
-
-        &:hover:after {
-            // content: "〈";
-        }
     }
-
-    & .__tab-main:hover ~ .__side-bar {
-        // width: 10%;
-    }      
-
-    &:nth-child(odd) {
-        & > .__title, .__start-time {
-            background-color: $light-grey-3;
-        }
-    }
-
     
 }
