--- a/style/main.css
+++ b/style/main.css
@@ -149,7 +149,7 @@ body {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   position: relative;
-  height: 14.25%;
+  height: 14.2%;
   cursor: pointer;
 }
 
@@ -241,6 +241,8 @@ body {
   position: relative;
   height: 20%;
   background-color: #F9F9F9;
+  -webkit-box-shadow: 0px 1px solid rgba(134, 129, 124, 0.4);
+          box-shadow: 0px 1px solid rgba(134, 129, 124, 0.4);
 }
 
 .task:not(:last-child) {
@@ -251,10 +253,14 @@ body {
   position: absolute;
   top: 0;
   z-index: 1;
+  overflow: auto;
   padding-top: 1rem;
   text-transform: uppercase;
   font-weight: 100;
   color: #282726;
+  margin-left: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   padding-left: 2rem;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -275,8 +281,32 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   top: 50%;
-  right: 4rem;
+  right: 6rem;
   height: 50%;
+}
+
+.task .__more-button {
+  border-radius: 50%;
+  background-color: #F9F9F9;
+  position: absolute;
+  right: 0.5rem;
+  bottom: 0.5rem;
+  height: 1.3rem;
+  width: 1.3rem;
+  font-weight: 900;
+  font-size: 1.55em;
+  color: #54504C;
+  text-align: center;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+  cursor: pointer;
+}
+
+.task .__more-button:hover {
+  color: #F9F9F9;
+  background-color: #54504C;
 }
 
 .task .__side-bar {
