--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -3,6 +3,7 @@ body {
   font-size: 60%;
   display: grid;
   padding: 0px;
+  overflow: hidden;
   margin: 0px;
   background: linear-gradient(110deg, $medium-grey-2 20%, $light-grey-3 250%);
   font-family: "Calibri", serif;
