--- a/style/main.scss
+++ b/style/main.scss
@@ -7,5 +7,6 @@
 @import "components/_selection-bar.scss";
 @import "components/_day-card.scss";
 @import "components/_task.scss";
+@import "components/_schedule.scss";
 @import "components/_next-task.scss";
 @import "components/_footer.scss";
