added custom scrollbar and task card structure.

--- a/style/components/_selection-bar.scss
+++ b/style/components/_selection-bar.scss
@@ -36,6 +36,7 @@
       width: 100%;
       margin-left: auto;
       font-size: 1.3em;
+      text-transform: none;
 
       & span {
         color: $light-grey-2;
