--- a/style/main.scss
+++ b/style/main.scss
@@ -9,4 +9,5 @@
 @import "components/_task.scss";
 @import "components/_schedule.scss";
 @import "components/_next-task.scss";
+@import "components/_task-card.scss";
 @import "components/_footer.scss";
