--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -34,4 +34,22 @@ body {
   grid-area: timer;
 }
 
+// Custom scroll bar
+
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(linen, 0.4); 
+  transition: all 0.2s;
+
+  &:active {
+    background-color: rgba(linen, 0.6); 
+  }
+}
 
