--- a/style/components/_schedule.scss
+++ b/style/components/_schedule.scss
@@ -11,15 +11,15 @@
         display: flex;
         position: relative;
         flex-direction: column;
-        background: linear-gradient(120deg, rgba($dark-grey-1, 0.8), rgba($dark-grey-3, 0.8) 130%);
+        background: linear-gradient(120deg, rgba($medium-grey-3, 0.8), rgba($medium-grey-1, 0.8) 180%);
 
         & .__label {
             text-align: center;
             transform: translateY(90%);
             width: 100%;
             height: 16.7%;
-            font-weight: 100;
-            color: $light-grey-1;
+            font-weight: 300;
+            color: $dark-grey-1;
             font-size: 1.3em;
             text-decoration: underline;
         }
