--- a/style/main.css
+++ b/style/main.css
@@ -32,6 +32,25 @@ body {
   grid-area: timer;
 }
 
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px grey;
+          box-shadow: inset 0 0 5px grey;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(250, 240, 230, 0.4);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: rgba(250, 240, 230, 0.6);
+}
+
 .header {
   background: linear-gradient(130deg, #282726, #3a3835 125%);
   padding: 0px;
@@ -176,6 +195,7 @@ body {
   width: 100%;
   margin-left: auto;
   font-size: 1.3em;
+  text-transform: none;
 }
 
 .day-selection-bar .__day-button div span {
@@ -425,7 +445,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: linear-gradient(120deg, rgba(40, 39, 38, 0.8), rgba(58, 56, 53, 0.8) 130%);
+  background: linear-gradient(120deg, rgba(185, 185, 185, 0.8), rgba(134, 129, 124, 0.8) 180%);
 }
 
 .day-card .__schedule .__hours-labels .__label {
@@ -434,8 +454,8 @@ body {
           transform: translateY(90%);
   width: 100%;
   height: 16.7%;
-  font-weight: 100;
-  color: #D6CAB0;
+  font-weight: 300;
+  color: #282726;
   font-size: 1.3em;
   text-decoration: underline;
 }
