--- a/style/components/_task.scss
+++ b/style/components/_task.scss
@@ -2,10 +2,11 @@
 .task {
     position: relative;
     height: 20%;
+    left: 0;
     // margin: 0.2em;
     // border-radius: 0.5em;
     background-color: $light-grey-3;
-    box-shadow: 0px 1px solid rgba($medium-grey-1, 0.4);
+    transition: all 0.3s;
 
     &:not(:last-child) {
         margin-bottom: 0.5em;
@@ -39,6 +40,7 @@
         color: $medium-grey-1;
         width: fit-content;
         top: 50%;
+        transition: all 0.3s;
         right: 6rem;
         height: 50%
     }
@@ -63,6 +65,7 @@
             color: $light-grey-3;
             background-color: $dark-grey-2;
         }
+
     }
 
     & .__side-bar {
