made some few other changes to the titles.

--- a/style/components/_next-task.scss
+++ b/style/components/_next-task.scss
@@ -18,7 +18,8 @@
         background: linear-gradient(135deg, $dark-grey-1 , $dark-grey-2);
         width: 100%;
         height: 40%;
-        text-transform: uppercase;
+        font-weight: 300;
+        // text-transform: uppercase;
         margin-left: auto;
         margin-right: auto;
         margin-top: 0;
