--- a/style/components/_day-card.scss
+++ b/style/components/_day-card.scss
@@ -14,8 +14,8 @@
         grid-area: titleT;
         background-color: $dark-grey-2;
         text-align: left;
-        font-weight: 900;
-        text-transform: uppercase;
+        font-weight: 300;
+        // text-transform: uppercase;
         padding-left: 1rem;
         font-size: 2.5em;
         color: $light-grey-3;
@@ -25,8 +25,8 @@
         grid-area: titleD;
         background-color: $medium-grey-2;
         text-align: center;
-        font-weight: 900;
-        text-transform: uppercase;
+        font-weight: 300;
+        // text-transform: uppercase;
         font-size: 2.5em;
         color: $dark-grey-2;
     }
@@ -35,8 +35,8 @@
         grid-area: titleS;
         background-color: $dark-grey-2;
         text-align: right;
-        font-weight: 900;
-        text-transform: uppercase;
+        font-weight: 300;
+        // text-transform: uppercase;
         padding-right: 1rem;
         font-size: 2.5em;
         color: $light-grey-3;
