--- a/style/components/_day-card.scss
+++ b/style/components/_day-card.scss
@@ -43,6 +43,7 @@
     }
 
     & .__tasks-box {
+        position: relative;
         grid-area: task;
         overflow-y: auto;
         overflow-x: hidden;
