added more styling to the in-depth task card.

--- a/style/components/_task.scss
+++ b/style/components/_task.scss
@@ -26,7 +26,7 @@
         transition: all 0.5s;
         padding-left: 2rem;
         width: fit-content;
-        text-decoration: underline;
+        text-decoration: $light-grey-1 underline;
         font-size: 1.6em;
         height: 50%;
     }
