--- a/style/components/_task-card.scss
+++ b/style/components/_task-card.scss
@@ -3,13 +3,15 @@
     transition: all 0.4s;
     position: absolute;
     box-shadow: inset 0px 0px 0.3rem 0.3rem rgba($medium-grey-1, 0.4);
-    padding: 0.5rem;
+    padding: 1rem;
+    background-color: $light-grey-3;
     box-sizing: border-box;
     top: 10%;
     left: 0;
     width: 100%;
-    height: 90%;
-    display: none;
+    min-height: 90%;
+    transform: translateX(100%);
+    transition: all 0.5s;
 
     & .__sticker {
         position: absolute;
@@ -57,6 +59,42 @@
         width: 20%;
         height: 10%;
 
+    }
+
+    & .__edit-btn {
+        position: absolute;
+        background-color: $dark-grey-3;
+        line-height: 1.2em;
+        left: 0;
+        top: 0;
+        width: 1.8rem;
+        height: 1.8rem;
+        clip-path: polygon(0 0, 100% 0, 0 100%);
+        font-size: 1.4em;
+        color: $light-grey-1;
+        transition: all 0.5s;
+        cursor: pointer;
+
+        &:hover {
+            padding: 0.1rem;
+            width: 2rem;
+            height: 2rem;
+            color: #FFF;
+
+        }
+
+    }
+
+    & h3 {
+        font-size: 1.5em;
+        text-decoration: $light-grey-1 underline;
+    }
+
+    & .__description {
+        
+        font-size: 1.2em;
+        padding-left: 0.5rem;
+        border-left: 2px solid $light-grey-1;
     }
 
 }
