--- a/style/components/_task-card.scss
+++ b/style/components/_task-card.scss
@@ -13,7 +13,7 @@
     transform: translateX(100%);
     transition: all 0.5s;
 
-    & .__sticker {
+    & .__sticker-important {
         position: absolute;
         right: 0.5rem;
         top: 0;
@@ -53,7 +53,7 @@
         transition: all 0.3s;
     }
 
-    & .__sticker:hover ~ .__sticker-hover-important {
+    & .__sticker-important:hover ~ .__sticker-hover-important {
         right: 2rem;
         font-size: 1.2em;
         width: 20%;
@@ -95,6 +95,15 @@
         font-size: 1.2em;
         padding-left: 0.5rem;
         border-left: 2px solid $light-grey-1;
+    }
+
+    & span {
+        color: $dark-grey-1;
+        font-size: 1.3em;
+    }
+
+    & .__timer {
+        font-size: 1.4em;
     }
 
 }
