--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -1,5 +1,53 @@
 
 
+@mixin footer-text {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(rgba($dark-grey-3, 0.4), rgba($medium-grey-1, 0.4) 250%);
+    margin: 0;
+    padding: 0;
+    width: 25%;
+    height: 100%;
+    color: $light-grey-2;
+    font-size: 4em;
+    transition: all 0.3s;
+    cursor: pointer;
+
+    &:hover {
+        color: $light-grey-3;
+        background-color: $dark-grey-1;
+    }
+
+    &:active {
+        background: radial-gradient(rgba($dark-grey-3, 0.4), rgba($medium-grey-1, 0.4) 150%);
+    }
+    
+}
+
 .footer {
     background: linear-gradient(130deg, $dark-grey-3, $dark-grey-1 125%);
+    position: relative;
+    display: inline-flex;
+
+    & .__prev-w {
+        @include footer-text;
+        transform: rotateZ(180deg);
+        border-left: .5px solid $medium-grey-1;
+    }
+
+    & .__prev-d {
+        @include footer-text;
+        transform: rotateZ(180deg);
+        border-left: .5px solid $medium-grey-1;
+    }
+
+    & .__next-d {
+        @include footer-text;
+    }
+
+    & .__next-w {
+        @include footer-text;
+        border-left: .5px solid $medium-grey-1;
+    }
 }
