--- a/style/components/_selection-bar.scss
+++ b/style/components/_selection-bar.scss
@@ -6,6 +6,7 @@
   font-weight: 300;
   background-color: $dark-grey-2;
   flex-flow: column;
+  display: none;
 
   .__day-button {
     box-shadow: 1px 0px 1px 1px #4040400d;
