--- a/style/main.scss
+++ b/style/main.scss
@@ -3,6 +3,7 @@
 
 @import "_layout.scss";
 
+@import "components/_nav-btn.scss";
 @import "components/_header.scss";
 @import "components/_selection-bar.scss";
 @import "components/_day-card.scss";
