--- a/style/main.css
+++ b/style/main.css
@@ -9,7 +9,7 @@ body {
   background: linear-gradient(110deg, #D9D9D9 20%, #F9F9F9 250%);
   font-family: "Calibri", serif;
   height: 100vh;
-  grid-template: "head head timer" 2fr "nav  main main" 12fr "nav  foot foot" 1fr / 1fr 3.5fr 1.5fr;
+  grid-template: "head head timer" 2fr "main  main main" 12fr "foot  foot foot" 1fr / 1fr 3.5fr 1.5fr;
 }
 
 .header {
@@ -52,6 +52,40 @@ body {
   background-color: rgba(250, 240, 230, 0.6);
 }
 
+.nav-btn {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 7vmin;
+  height: 7vmin;
+  top: 1.3rem;
+  left: 1.3rem;
+  background-color: rgba(134, 129, 124, 0.3);
+  border-radius: 50%;
+  font-size: 2.8em;
+  color: #B9B9B9;
+  overflow: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.nav-btn:hover {
+  background-color: rgba(134, 129, 124, 0.6);
+}
+
+.nav-btn:active {
+  -webkit-transform: rotateZ(90deg);
+          transform: rotateZ(90deg);
+}
+
 .header {
   background: linear-gradient(130deg, #282726, #3a3835 125%);
   padding: 0px;
@@ -69,8 +103,8 @@ body {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   position: relative;
-  margin-left: 3em;
-  min-width: 30%;
+  margin-left: 10%;
+  min-width: 20%;
   height: 4em;
 }
 
@@ -92,27 +126,12 @@ body {
   transition: all 0.3s;
 }
 
-.header .__mainTitle .weekx {
-  opacity: 0;
-}
-
-.header .__mainTitle:hover > .weekx {
-  opacity: 1;
-  -webkit-transform: rotateY(360deg);
-          transform: rotateY(360deg);
-}
-
-.header .__mainTitle:hover > .yourweek {
-  opacity: 0;
-  -webkit-transform: rotateY(360deg);
-          transform: rotateY(360deg);
-}
-
 .header .__time-container {
-  width: 50%;
+  width: 20%;
   height: 4em;
   position: relative;
-  padding: 5%;
+  padding: 0;
+  margin: 0;
   vertical-align: middle;
 }
 
@@ -160,6 +179,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-flow: column;
           flex-flow: column;
+  display: none;
 }
 
 .day-selection-bar .__day-button {
@@ -758,7 +778,7 @@ body {
   width: 25%;
   height: 100%;
   color: #EDF5E1;
-  font-size: 4em;
+  font-size: 2.5em;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
@@ -792,7 +812,7 @@ body {
   width: 25%;
   height: 100%;
   color: #EDF5E1;
-  font-size: 4em;
+  font-size: 2.5em;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
@@ -826,7 +846,7 @@ body {
   width: 25%;
   height: 100%;
   color: #EDF5E1;
-  font-size: 4em;
+  font-size: 2.5em;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
@@ -857,7 +877,7 @@ body {
   width: 25%;
   height: 100%;
   color: #EDF5E1;
-  font-size: 4em;
+  font-size: 2.5em;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
