--- a/style/components/_task.scss
+++ b/style/components/_task.scss
@@ -16,6 +16,7 @@
     & .__title {
         position: absolute;
         top: 0;
+        left: 0px;
         z-index: 1;
         overflow: auto;
         padding-top: 1rem;
