--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -38,6 +38,7 @@
     position: relative;
     padding: 0;
     margin: 0;
+    margin-left: 5em;
     vertical-align: middle;
 
     & .__text-second {
