--- a/style/main.css
+++ b/style/main.css
@@ -650,13 +650,13 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   top: 10%;
-  left: 0;
   width: 100%;
+  left: 0;
+  display: none;
+  overflow: hidden;
   min-height: 90%;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .task-card .__sticker-important {
