added the loading of the schedule from the json file.

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -22,9 +22,9 @@ body {
   grid-area: nav;
 }
 
-.day-card-container {
+.day-card {
   grid-area: main;
-  position: relative;
+  // position: relative;
 }
 
 .footer {
