--- a/style/components/_schedule.scss
+++ b/style/components/_schedule.scss
@@ -46,9 +46,8 @@
         height: 100%;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
-        
 
-        & .__task-spans {
+        & .__task-span {
             position: absolute;
             border-radius: 0rem;
             border: 1px solid $medium-grey-1;
