--- a/style/components/_day-card.scss
+++ b/style/components/_day-card.scss
@@ -3,11 +3,7 @@
     background-color: $medium-grey-3;
     margin: 0em;
     display: grid;
-    // min-width: 0;
-    // min-height: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    position: relative;
     grid-template: "titleT titleD titleD titleS" 1fr
                    "task task schedule schedule" 14fr
                    / 3fr 1fr 1fr 3fr;
@@ -28,7 +24,7 @@
         background-color: $medium-grey-2;
         text-align: center;
         font-weight: 300;
-        // text-transform: uppercase;
+        text-transform: uppercase;
         font-size: 2.5em;
         color: $dark-grey-2;
     }
