--- a/style/components/_task.scss
+++ b/style/components/_task.scss
@@ -41,7 +41,7 @@
         color: $medium-grey-1;
         width: fit-content;
         top: 50%;
-        transition: all 0.3s;
+        // transition: all 0.3s;
         right: 6rem;
         height: 50%
     }
