--- a/style/main.css
+++ b/style/main.css
@@ -236,7 +236,7 @@ body {
   display: -ms-grid;
   display: grid;
   position: relative;
-  grid-template: "titleT titleD titleD titleS" 1fr "task task schedule schedule" 14fr / 3fr 1fr 1fr 3fr;
+  grid-template: "titleT titleD titleD titleS" 1fr "task task schedule schedule" 10fr / 3fr 1fr 1fr 3fr;
 }
 
 .day-card .__title-task {
@@ -249,9 +249,20 @@ body {
   color: #F9F9F9;
 }
 
-.day-card .__title-day {
+.day-card .__title-day-container {
   grid-area: titleD;
   background-color: #D9D9D9;
+}
+
+.day-card .__title-day-container .__day {
+  text-align: center;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 2.5em;
+  color: #54504C;
+}
+
+.day-card .__title-day-container .__date {
   text-align: center;
   font-weight: 300;
   text-transform: uppercase;
@@ -329,8 +340,6 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   top: 50%;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
   right: 6rem;
   height: 50%;
 }
