--- a/style/main.css
+++ b/style/main.css
@@ -251,23 +251,33 @@ body {
 
 .day-card .__title-day-container {
   grid-area: titleD;
+  position: relative;
   background-color: #D9D9D9;
 }
 
 .day-card .__title-day-container .__day {
+  position: absolute;
   text-align: center;
   font-weight: 300;
   text-transform: uppercase;
   font-size: 2.5em;
   color: #54504C;
+  width: 100%;
+  height: 50%;
 }
 
 .day-card .__title-day-container .__date {
+  position: absolute;
   text-align: center;
   font-weight: 300;
   text-transform: uppercase;
   font-size: 2.5em;
   color: #54504C;
+  font-size: 1.8em;
+  color: #282726;
+  width: 100%;
+  height: 50%;
+  top: 50%;
 }
 
 .day-card .__title-schedule {
